# src/app/services/stock/handlers/portfolios.go
@@ -5,7 +5,6 @@ import (
 	"alexander-lis/investment/shared/infrastructure"
 	portfolio "alexander-lis/investment/shared/protobuf/services/stock/proto/v1"
 	"context"
-	"fmt"
 	"time"
 )
 
@@ -17,33 +16,53 @@ type PortfolioServiceServerImpl struct {
 func (p *PortfolioServiceServerImpl) CreatePortfolio(ctx context.Context, request *portfolio.CreatePortfolioRequest) (*portfolio.CreatePortfolioResponse, error) {
 	from, err := time.Parse(time.RFC3339, request.From)
 	if err != nil {
-		return nil, fmt.Errorf("Invalid from date")
+		return nil, err
 	}
 
 	to, err := time.Parse(time.RFC3339, request.To)
 	if err != nil {
-		return nil, fmt.Errorf("Invalid to date")
+		return nil, err
 	}
 
-	p.PortfolioRepository.CreateOrUpdate(&persistence.Portfolio{
+	id, err := p.PortfolioRepository.Create(&persistence.Portfolio{
 		Name: request.Name,
 		From: from,
 		To:   to,
 	})
 
-	return &portfolio.CreatePortfolioResponse{Id: "sds"}, nil
+	if err != nil {
+		return nil, err
+	}
+
+	return &portfolio.CreatePortfolioResponse{
+		Portfolio: &portfolio.Portfolio{
+			Id:   id,
+			Name: request.Name,
+			From: request.From,
+			To:   request.To,
+		},
+	}, nil
 }
 
 func (p *PortfolioServiceServerImpl) GetPortfolios(ctx context.Context, request *portfolio.GetPortfoliosRequest) (*portfolio.GetPortfoliosResponse, error) {
-	portfolios := p.PortfolioRepository.ReadAll()
+	result, err := p.PortfolioRepository.ReadAll()
+	if err != nil {
+		return nil, err
+	}
 
-	return &portfolio.GetPortfoliosResponse{
-		Portfolios: infrastructure.Map[persistence.Portfolio, portfolio.Portfolio](portfolios, func(p *persistence.Portfolio) *portfolio.Portfolio {
-			return &portfolio.Portfolio{
+	portfolios := make([]*portfolio.Portfolio, 0, len(result))
+	for _, p := range result {
+		portfolios = append(portfolios,
+			&portfolio.Portfolio{
 				Name: p.Name,
-			}
-		}),
-	}, nil
+				Id:   p.Id,
+				To:   p.To.Format(time.RFC3339),
+				From: p.From.Format(time.RFC3339),
+			},
+		)
+	}
+
+	return &portfolio.GetPortfoliosResponse{Portfolios: portfolios}, nil
 }
 
 func (p *PortfolioServiceServerImpl) GetPortfolio(ctx context.Context, request *portfolio.GetPortfolioRequest) (*portfolio.GetPortfolioResponse, error) {
